<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_quarters"
        android:id="@+id/textViewQuarters" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_semi"
        android:id="@+id/textViewSemi"
        android:layout_above="@+id/eTxtQrt1"
        android:layout_toEndOf="@+id/textViewQuarters"
        android:layout_marginStart="41dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_final"
        android:id="@+id/textView"
        android:layout_marginStart="61dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/textViewSemi" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eTxtQrt1"
        android:hint="TEAM 1"
        android:gravity="center"
        android:background="@color/slate_gray"
        android:width="75dp"
        android:height="25dp"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/textViewQuarters"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eTxtQrt2"
        android:hint="TEAM 2"
        android:gravity="center"
        android:background="@color/slate_gray"
        android:width="75dp"
        android:height="25dp"
        android:layout_below="@+id/eTxtSemi1"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eTxtQrt3"
        android:hint="TEAM 3"
        android:gravity="center"
        android:background="@color/slate_gray"
        android:width="75dp"
        android:height="25dp"
        android:layout_below="@+id/eTxtFinal1"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eTxtQrt4"
        android:hint="TEAM 4"
        android:gravity="center"
        android:background="@color/slate_gray"
        android:width="75dp"
        android:height="25dp"
        android:layout_below="@+id/eTxtSemi2"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eTxtQrt5"
        android:hint="TEAM 5"
        android:gravity="center"
        android:background="@color/slate_gray"
        android:width="75dp"
        android:height="25dp"
        android:layout_below="@+id/eTxtWinner"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eTxtQrt6"
        android:hint="TEAM 6"
        android:gravity="center"
        android:background="@color/slate_gray"
        android:width="75dp"
        android:height="25dp"
        android:layout_below="@+id/eTxtSemi3"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eTxtQrt7"
        android:hint="TEAM 7"
        android:gravity="center"
        android:background="@color/slate_gray"
        android:width="75dp"
        android:height="25dp"
        android:layout_below="@+id/eTxtFinal2"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eTxtQrt8"
        android:hint="TEAM 8"
        android:gravity="center"
        android:background="@color/slate_gray"
        android:width="75dp"
        android:height="25dp"
        android:layout_below="@+id/eTxtSemi4"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eTxtSemi1"
        android:background="@color/bronze"
        android:gravity="center"
        android:width="75dp"
        android:height="25dp"
        android:layout_below="@+id/eTxtQrt1"
        android:layout_alignStart="@+id/textViewSemi" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eTxtSemi2"
        android:background="@color/bronze"
        android:gravity="center"
        android:width="75dp"
        android:height="25dp"
        android:layout_below="@+id/eTxtQrt3"
        android:layout_alignStart="@+id/eTxtSemi1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eTxtSemi3"
        android:background="@color/bronze"
        android:gravity="center"
        android:width="75dp"
        android:height="25dp"
        android:layout_below="@+id/eTxtQrt5"
        android:layout_alignStart="@+id/eTxtSemi2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eTxtSemi4"
        android:background="@color/bronze"
        android:gravity="center"
        android:width="75dp"
        android:height="25dp"
        android:layout_below="@+id/eTxtQrt7"
        android:layout_alignStart="@+id/eTxtSemi3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eTxtFinal1"
        android:background="@color/silver"
        android:gravity="center"
        android:width="75dp"
        android:height="25dp"
        android:layout_below="@+id/eTxtQrt2"
        android:layout_alignStart="@+id/textView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eTxtFinal2"
        android:background="@color/silver"
        android:gravity="center"
        android:width="75dp"
        android:height="25dp"
        android:layout_below="@+id/eTxtQrt6"
        android:layout_alignStart="@+id/eTxtFinal1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eTxtWinner"
        android:background="@color/gold"
        android:gravity="center"
        android:width="75dp"
        android:height="25dp"
        android:layout_below="@+id/eTxtQrt4"
        android:layout_toRightOf="@+id/eTxtFinal1"
        android:layout_toEndOf="@+id/eTxtFinal1" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Winner"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lucky_dip_toggle"
        android:id="@+id/toggleButton"
        android:textOn="CLEAR"
        android:textOff="LUCKY DIP"
        android:layout_below="@+id/eTxtQrt8"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView" />


</RelativeLayout>
